Fix: Icon Box widget - Icon can no longer be aligned left/right

--- a/assets/dev/scss/frontend/widgets/icon-box.scss
+++ b/assets/dev/scss/frontend/widgets/icon-box.scss
@@ -32,7 +32,7 @@
 			}
 
 			.elementor-icon-box-icon {
-				margin-inline: auto;
+				justify-content: center;
 			}
 		}
 	}
